# qgis-plugin-base

./: .gitignore  admin.py  pyproject.toml
